--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,6 +10,9 @@ body {
   background-color: $color-background;
   padding: 1rem;
 }
+input {
+  margin-top: 10px;
+}
 
 .card-container {
   margin-top: 1rem;
